--- a/package.json
+++ b/package.json
@@ -51,7 +51,9 @@
   },
   "devDependencies": {
     "@storybook/addon-actions": "^3.3.13",
+    "@storybook/addon-info": "^3.3.15",
     "@storybook/addon-links": "^3.3.13",
+    "@storybook/addon-storysource": "^3.4.0-alpha.8",
     "@storybook/addons": "^3.3.13",
     "@storybook/react": "^3.3.13",
     "babel-core": "^6.26.0",
@@ -62,7 +64,8 @@
     "postcss-import": "^11.1.0",
     "postcss-loader": "2.0.8",
     "postcss-media-minmax": "^3.0.0",
-    "postcss-nested": "^3.0.0"
+    "postcss-nested": "^3.0.0",
+    "storybook-addon-jsx": "^5.3.0"
   },
   "jest": {
     "collectCoverageFrom": [
